@@ -1,4 +1,5 @@
 0.7.0 (currently working on)
+- [#1993] Feature: Implement the SPL iterator interface in the bag class
 - [#2123] Fix: Huge memory consumption through createFakeFrontend() in seminars
 - [#1901] Feature: Use more SQL indices
 - [#2229] Feature: Add 'is_dummy_record=1' to the constructor call of the bags in their testcases
